--- a/Assets/Develop/output/team.html
+++ b/Assets/Develop/output/team.html
@@ -25,14 +25,14 @@
             <div class="team-area col-12 d-flex justify-content-center">
                 <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">Sample Manager</h2>
+        <h2 class="card-title">Mark</h2>
         <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Manager</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: 555555</li>
-            <li class="list-group-item">Email: <a href="mailto:Sample@sample.com">Sample@sample.com</a></li>
-            <li class="list-group-item">Office number: 5555555555</li>
+            <li class="list-group-item">ID: 1111</li>
+            <li class="list-group-item">Email: <a href="mailto:mark@company.org">mark@company.org</a></li>
+            <li class="list-group-item">Office number: 123456789</li>
         </ul>
     </div>
 </div>
